hphp/hack/test/typecheck/trait_use/use_trait_partial_override.php.exp
File "use_trait_partial_override.php", line 11, characters 7-8:
Class `TP` inherits trait method `foo` via multiple traits.  Add the __EnableMethodTraitDiamond attribute to `TP`, remove the multiple paths, or override the method (Typing[4439])
  File "use_trait_partial_override.php", line 4, characters 19-21:
  Trait method is defined here
  File "use_trait_partial_override.php", line 12, characters 11-12:
  `TP` uses `T2`
  File "use_trait_partial_override.php", line 9, characters 16-16:
  `T2` uses `T`
  File "use_trait_partial_override.php", line 12, characters 7-8:
  `TP` uses `T1`
  File "use_trait_partial_override.php", line 8, characters 16-16:
  `T1` uses `T`
